[package]
name = "rsclip"
version = "0.1.0"
edition = "2021"
authors = ["Blame <xblame@qq.com>"]
description = "A tool to synchronize the clipboards between clients and server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.181", features = ["derive"] }
serde_yaml = "0.9.25"
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-native-tls = "0.3.1"
bincode = "1.3.3"
cli-clipboard = "0.4.0"
